   like "rcreate" (replaces "init"), "rlist" (list archives in repository), and "rinfo" (show
   repository info). If you install Borg 2, you'll need to manually "borg transfer" or "borgmatic
   transfer" your existing Borg 1 repositories before use. See the Borg 2.0 changelog for more
   information about Borg 2: https://www.borgbackup.org/releases/borg-2.0.html
 * #565: Fix handling of "repository" and "data" consistency checks to prevent invalid Borg flags.
 * #566: Modify "mount" and "extract" actions to require the "--repository" flag when multiple
   repositories are configured.
 * Add support for disabling TLS verification in Healthchecks monitoring hook with "verify_tls"
   option.

1.6.6
 * #559: Update documentation about configuring multiple consistency checks or multiple databases.
 * #560: Fix all database hooks to error when the requested database to restore isn't present in the
   Borg archive.
 * #561: Fix command-line "--override" flag to continue supporting old configuration file formats.
 * #563: Fix traceback with "create" action and "--json" flag when a database hook is configured.

1.6.5
 * #553: Fix logging to include the full traceback when Borg experiences an internal error, not just
   the first few lines.
 * #554: Fix all monitoring hooks to warn if the server returns an HTTP 4xx error. This can happen
   with Healthchecks, for instance, when using an invalid ping URL.
 * #555: Fix environment variable plumbing so options like "encryption_passphrase" and
   "encryption_passcommand" in one configuration file aren't used for other configuration files.

1.6.4
 * #546, #382: Keep your repository passphrases and database passwords outside of borgmatic's
   configuration file with environment variable interpolation. See the documentation for more
   information: https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/

1.6.3
 * #541: Add "borgmatic list --find" flag for searching for files across multiple archives, useful